feat: finalize swagger
