# src/routes/product-routes.ts
@@ -4,10 +4,10 @@ import ProductController from '../controllers/product-controller'
 
 const productRouter = Router()
 productRouter.post('/', ProductController.store)
-productRouter.patch('/:id', ProductController.update)
-productRouter.delete('/:id', ProductController.delete)
+productRouter.patch('/update/:id', ProductController.update)
+productRouter.delete('/delete/:id', ProductController.delete)
 productRouter.get('/product/:id', ProductController.show)
-productRouter.get('/', ProductController.index)
+productRouter.get('/index', ProductController.index)
 productRouter.get('/income', ProductController.getIncomes)
 
 
